...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <!-- Card Option -->
                <RadioButton
                    android:id="@+id/radioCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Credit/Debit Card"
                    android:textSize="16sp"
                    android:checked="true"
...
                    android:layout_weight="1"
                    android:backgroundTint="#E0E0E0"
                    android:text="Cancel"
                    android:textColor="#424242" />

                <Button
                    android:id="@+id/btnProceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#A47DAB"
                    android:text="Proceed"
...
